--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+#h2
+#spring.h2.console.enabled=true
+#spring.datasource.name=springit
 
+#JPA & Hibernate
+spring.jpa.show-sql=true
+
+#MySQL
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://review-db.czix9n2lvrmu.ap-southeast-2.rds.amazonaws.com/springit
+spring.datasource.username=demo
+spring.datasource.password=demo
